# Skatl

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: agentic_rag_handoff.md
mock_data/: battery_market_background_payload.json  battery_reference_catalog.json  battery_strategy_catl_payload.json  battery_strategy_comparison_brief.json  battery_strategy_human_review_2.json  battery_strategy_human_review_3_approve_sample.json  battery_strategy_human_review_3_reject_sample.json  battery_strategy_skon_payload.json
notebooks/: Battery-Comparative-SWOT-ReportAgent-v2.py  Battery-Comparative-SWOT-ReportAgent.ipynb  Battery-Comparative-SWOT-ReportAgent.py
results/: battery_market_strategy_report.json
src/: logging_utils.py
src/agents/: __init__.py  comparative_swot.py  market_agent.py  report_agent.py  strategy_agent.py
src/orchestrator/: __init__.py  orchestrator.py
src/phase1/: __init__.py  debug_market_phase.py  market_phase.py
src/prompts/: __init__.py  market_prompt.py  strategy_prompt.py
src/rag/: __init__.py  agentic.py  collections.py  config.py  constants.py  pdf_ingest.py  profiles.py  source_metadata.py  state.py  table_backends.py  vectorstore.py
src/schemas/: __init__.py  agent_io.py  confidence.py  market_agent_io.py  market_context.py  phase1_state.py  state.py
src/tools/: __init__.py  rag_pipeline.py  rag_tool.py  web_search_tool.py
